--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -38,6 +38,7 @@
       <li><a  href="/pages.html">Pages</a></li>
       <li><a  href="/categories.html">Categories</a></li>
       <li><a  href="/tags.html">Tags</a></li>
+      <li><a  href="/about">About</a></li>
     </ul>
   </div>
 
