--- a/_includes/themes/pradeep/post.html
+++ b/_includes/themes/pradeep/post.html
@@ -1,6 +1,6 @@
 <div id="page">
 	
-  <h1 class="emphnext">{{ page.title }}</h1>
+  <h1 class>{{ page.title }}</h1>
   <ul class="tag_box inline">
   {% assign tags_list = page.tags %}
   {% include helpers/tags_list.html %}
