modified footers and linked Content by to about page

--- a/_includes/themes/pradeep/default.html
+++ b/_includes/themes/pradeep/default.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }} &larr; {{ page.top }}</title>
+   <title> Pradeep Nayak's Website &larr; {{ page.top }}</title>
    <meta name="author" content="{{ site.author.name }}" />
 
    <link rel="start" href="/" />
@@ -30,7 +30,6 @@
   <div id="header">
     <h1>
     	<a href="/" title="{{ site.title }}">{{ site.title }}</a>
-    	<span class="byline">&larr; <a href="/">{{ site.author.name }}</a></span>
     </h1>
     <ul class="nav">
       <li><a class="home" href="/">Home</a></li>
@@ -47,8 +46,7 @@
   <div id="footer">
   	<address>
   		<span class="copyright">
-  			Content by <a href="/info/site.html">{{ site.author.name }}</a>. Design by 
-  			<a href="http://mark.reid.name/">Mark Reid</a>
+  			Content by <a href="/about">{{ site.author.name }}</a>.
   			<br/>
   			(<a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Some rights reserved</a>)			
   		</span>
