--- a/_includes/themes/pradeep/default.html
+++ b/_includes/themes/pradeep/default.html
@@ -19,6 +19,8 @@
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/syntax.css" type="text/css" />
+   <!-- my custom font -->
+   <link href='http://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>
 
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/screen.css" type="text/css" />
@@ -40,7 +42,6 @@
       <li><a  href="/tags.html">Tags</a></li>
     </ul>
   </div>
-
   {{ content }}
   
   <div id="footer">
