--- a/_includes/themes/pradeep/post.html
+++ b/_includes/themes/pradeep/post.html
@@ -31,7 +31,7 @@
 {% if page.comments %}
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'pradeepnayak'; // required: replace example with your forum shortname
+    var disqus_shortname = '{{ site.author.disqus_shortname }}'; // required: replace example with your forum shortname
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
