--- a/_includes/themes/pradeep/post.html
+++ b/_includes/themes/pradeep/post.html
@@ -1,5 +1,4 @@
 <div id="page">
-	
   <h1 class>{{ page.title }}</h1>
   <ul class="tag_box inline">
   {% assign tags_list = page.tags %}
@@ -22,7 +21,21 @@
     <a href="{{ page.previous.url }}" class="prev" title="{{ page.previous.title }}">&larr; Earlier Post</a>
   {% endif %}
   </div>
-  
+  <div id = "tweet-button">
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="prdpnayak">Tweet</a>
+    <script>
+      !function(d,s,id) {
+          var js,fjs=d.getElementsByTagName(s)[0];
+          if(!d.getElementById(id)) {
+              js=d.createElement(s);
+              js.id=id;
+              js.src="//platform.twitter.com/widgets.js";
+              fjs.parentNode.insertBefore(js,fjs);
+          }
+      }
+      (document,"script","twitter-wjs");
+    </script>  
+  </div>
 </div><!-- End Page -->
 
 <!-- Discus Comments -->
