--- a/_includes/themes/pradeep/default.html
+++ b/_includes/themes/pradeep/default.html
@@ -20,8 +20,7 @@
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/syntax.css" type="text/css" />
    <!-- my custom font -->
-   <link href='http://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>
-
+   <link href='http://fonts.googleapis.com/css?family=Fresca' rel='stylesheet' type='text/css'>
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/screen.css" type="text/css" />
 
