--- a/_includes/themes/pradeep/default.html
+++ b/_includes/themes/pradeep/default.html
@@ -38,7 +38,7 @@
       <li><a  href="/blog">Blog</a></li>
       <li><a  href="/categories.html">Categories</a></li>
       <li><a  href="/archive.html">Archive</a></li>
-      <li><a  href="/tags.html">Tags</a></li>
+      <li><a  href="/search.html">Searchs</a></li>
     </ul>
   </div>
   {{ content }}
