--- a/assets/themes/pradeep/css/screen.css
+++ b/assets/themes/pradeep/css/screen.css
@@ -21,7 +21,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,p,blockquote,th,t
 /* @end */
 
 body {
-    font-family: Fresca, Palatino, georgia, "times new roman", serif;
+    font-family: Unkempt, Fresca, Palatino, georgia, "times new roman", serif;
     background-color: antiqueWhite;
     background-position: center -18em;
     background-repeat: repeat-x; 
@@ -31,7 +31,7 @@ body {
 img { -ms-interpolation-mode:bicubic; }
 
 /* IE6 ignores this and uses default size of 16pt */
-html>body { font-size:18px; }
+html>body { font-size:20px; }
 p { margin: 0 0 1.5em 0; text-align: justify; }
 
 a { text-decoration: none; color: #339; }
@@ -45,7 +45,7 @@ h1,h2,h3,h4 {
     font-size:1.5em; 
     font-weight: normal; 
     clear: left;    
-    font-family: Fresca, 'lucida grande', sans-serif; 
+    font-family: Unkempt ,Fresca, 'lucida grande', sans-serif; 
 }
 h1 { margin-bottom: 1em; }
 h2 {
@@ -207,7 +207,7 @@ ul.compact li a {
     margin-bottom: 0;
 }
 #header h1 {
-    font-family: Fresca, Palatino, georgia, "times new roman", serif;
+    font-family: Unkempt ,Fresca, Palatino, georgia, "times new roman", serif;
     margin-bottom: 0;
     line-height: 0.9em;
     display: block;
@@ -285,7 +285,7 @@ body#Kith #header a.kith
     padding-right: 3em;
 }
 .section h1 {
-    font-family: Fresca, Palatino, georgia, "times new roman", serif;
+    font-family: Unkempt, Fresca, Palatino, georgia, "times new roman", serif;
     font-size: 100%;
     line-height: 1.43em;
     position: absolute;
