just changing background color for fun

--- a/assets/themes/pradeep/css/screen.css
+++ b/assets/themes/pradeep/css/screen.css
@@ -22,7 +22,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,p,blockquote,th,t
 
 body {
     font-family: Unkempt, Fresca, Palatino, georgia, "times new roman", serif;
-    background-color: antiqueWhite;
+    background-color: beige;
     background-position: center -18em;
     background-repeat: repeat-x; 
 }
