--- a/assets/themes/pradeep/css/screen.css
+++ b/assets/themes/pradeep/css/screen.css
@@ -16,6 +16,20 @@
  * AUTHOR: Mark Reid <mark@reid.name>
  */
 
+@font-face {
+    font-family: 'JustVector';
+    src: url('justvectorv2-webfont.eot');
+    src: url('justvectorv2-webfont.eot?#iefix') format('eot'),
+         url('justvectorv2-webfont.woff') format('woff'),
+         url('justvectorv2-webfont.ttf') format('truetype'),
+         url('justvectorv2-webfont.svg#webfontkw9J4lGf') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+.social { 
+    font-family: JustVector;
+    font-size: 45px;
+}
 /* @group Reset */
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,p,blockquote,th,td,abbr { margin:0; padding:0;}
 /* @end */
