--- a/_includes/themes/pradeep/post.html
+++ b/_includes/themes/pradeep/post.html
@@ -25,17 +25,18 @@
     {% include helpers/tweet-button.html %}
   {% endif %}
 </div><!-- End Page -->
-<script type="text/javascript"><!--
+<div id = "google-ads">
+<script type="text/javascript">
 google_ad_client = "ca-pub-5288940759807123";
 /* Gooogle Test */
 google_ad_slot = "3677851868";
 google_ad_width = 250;
 google_ad_height = 250;
-//-->
 </script>
 <script type="text/javascript"
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+</div>
 
 <!-- Discus Comments -->
 <div id="disqus_thread">
