--- a/_includes/themes/pradeep/post.html
+++ b/_includes/themes/pradeep/post.html
@@ -28,10 +28,10 @@
 <div id = "google-ads">
 <script type="text/javascript">
 google_ad_client = "ca-pub-5288940759807123";
-/* Gooogle Test */
-google_ad_slot = "3677851868";
-google_ad_width = 250;
-google_ad_height = 250;
+/* Pradeepnayak's ads */
+google_ad_slot = "2137125699";
+google_ad_width = 728;
+google_ad_height = 90;
 </script>
 <script type="text/javascript"
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
