--- a/assets/themes/pradeep/css/screen.css
+++ b/assets/themes/pradeep/css/screen.css
@@ -26,6 +26,17 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'ArvoRegular';
+    src: url('Arvo-Regular-webfont.eot');
+    src: url('Arvo-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Arvo-Regular-webfont.woff') format('woff'),
+         url('Arvo-Regular-webfont.ttf') format('truetype'),
+         url('Arvo-Regular-webfont.svg#ArvoRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 .social { 
     font-family: JustVector;
     font-size: 45px;
@@ -36,7 +47,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,p,blockquote,th,t
 /* @end */
 
 body {
-    font-family: Unkempt, Fresca, Palatino, georgia, "times new roman", serif;
+    font-family: ArvoRegular, georgia, "times new roman", serif;
     background-color: beige;
     background-position: center -18em;
     background-repeat: repeat-x; 
@@ -60,7 +71,7 @@ h1,h2,h3,h4 {
     font-size:1.5em; 
     font-weight: normal; 
     clear: left;    
-    font-family: Unkempt ,Fresca, 'lucida grande', sans-serif; 
+    font-family: ArvoRegular , 'lucida grande', sans-serif; 
 }
 h1 { margin-bottom: 1em; }
 h2 {
@@ -222,7 +233,7 @@ ul.compact li a {
     margin-bottom: 0;
 }
 #header h1 {
-    font-family: Unkempt ,Fresca, Palatino, georgia, "times new roman", serif;
+    font-family: ArvoRegular , georgia, "times new roman", serif;
     margin-bottom: 0;
     line-height: 0.9em;
     display: block;
@@ -300,7 +311,7 @@ body#Kith #header a.kith
     padding-right: 3em;
 }
 .section h1 {
-    font-family: Unkempt, Fresca, Palatino, georgia, "times new roman", serif;
+    font-family: ArvoRegular, georgia, "times new roman", serif;
     font-size: 100%;
     line-height: 1.43em;
     position: absolute;
