--- a/assets/themes/pradeep/css/screen.css
+++ b/assets/themes/pradeep/css/screen.css
@@ -16,6 +16,31 @@
  * AUTHOR: Mark Reid <mark@reid.name>
  */
 
+ #searchText {
+  line-height:22px;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
+  border: 1px solid #ccc;
+  color: #999;
+  padding: 6px 15px 6px 15px;
+  -webkit-border-radius:15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  margin-right: 15px;
+}
+
+.match {
+  background-color: #f9ffa1;
+  -webkit-animation-name: pop;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;    
+}
+
 @font-face {
     font-family: 'JustVector';
     src: url('justvectorv2-webfont.eot');
