--- a/assets/themes/pradeep/css/screen.css
+++ b/assets/themes/pradeep/css/screen.css
@@ -274,10 +274,12 @@ ul.compact li a {
     line-height: 1.6em;
     display: block;
     margin: 0;
-    width: 53%;
+    width: 73%;
     text-align: right;
 }
 #header ul li { display: inline; }
+#header ul li form { display: inline; }
+
 #header ul li a {
     padding: 0.4em 0.3em 0 0.3em;
     display: inline;
