--- a/_includes/themes/pradeep/default.html
+++ b/_includes/themes/pradeep/default.html
@@ -19,8 +19,8 @@
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/syntax.css" type="text/css" />
-   <!-- my custom font 
-   <link href='http://fonts.googleapis.com/css?family=Fresca|Unkempt:400,700|Droid+Serif:400,700' rel='stylesheet' type='text/css'>-->
+   <!-- my custom font -->
+   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400' rel='stylesheet' type='text/css'>   
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/screen.css" type="text/css" />
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/social.css" type="text/css" />
