--- a/_includes/themes/pradeep/default.html
+++ b/_includes/themes/pradeep/default.html
@@ -24,7 +24,8 @@
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/screen.css" type="text/css" />
    <link rel="stylesheet" href="{{ theme_asset_path }}/css/social.css" type="text/css" />
-
+   <script type="text/javascript" src="//use.typekit.net/wkg5aki.js"></script>
+   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body id="{{ page.section }}">
 <div id="site">
