making it presentable

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
 ---
 ---
-{% assign theme_asset_path = "/assets/themes/pradeep" %}
+{% assign theme_asset_path = "/content" %}
 {% include themes/metroui/default.html %}
