--- a/_includes/themes/metroui/default.html
+++ b/_includes/themes/metroui/default.html
@@ -16,25 +16,25 @@
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 
    <!--<link rel="stylesheet" type="text/css" href="content/css/bootstrap.css">-->
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-responsive.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-ui-light.css">
-   <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro-icons.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro-responsive.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro-ui-light.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/datepicker.css">
    <!--[if IE 7]>
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons-ie7.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro-icons-ie7.css">
    <![endif]-->
 
    <!--  these two css are to use only for documentation -->
-   <link rel="stylesheet" type="text/css" href="/content/css/demo.css">
+   <link rel="stylesheet" type="text/css" href="/{{theme_asset_path}}/css/demo.css">
    <link rel="stylesheet" type="text/css" href="scripts/google-code-prettify/prettify.css" >
 
    <!-- Le fav and touch icons -->
-   <link rel="shortcut icon" href="content/ico/favicon.ico">
-   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="content/ico/apple-touch-icon-144-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="content/ico/apple-touch-icon-114-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="content/ico/apple-touch-icon-72-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" href="content/ico/apple-touch-icon-57-precomposed.png">
+   <link rel="shortcut icon" href="{{theme_asset_path}}/ico/favicon.ico">
+   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{theme_asset_path}}/ico/apple-touch-icon-144-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{theme_asset_path}}/ico/apple-touch-icon-114-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{theme_asset_path}}/ico/apple-touch-icon-72-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" href="{{theme_asset_path}}/ico/apple-touch-icon-57-precomposed.png">
   
    <!-- All JavaScript at the bottom, except for Modernizr and Respond.
       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
