--- a/_includes/themes/metroui/post.html
+++ b/_includes/themes/metroui/post.html
@@ -16,26 +16,26 @@
    <!-- remove or comment this line if you want to use the local fonts -->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 
-   <link rel="stylesheet" type="text/css" href="./content/css/bootstrap.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootstrap-responsive.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-tiles.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-charms.css">
-   <link rel="stylesheet" type="text/css" href="content/css/metro-ui-light.css">
-   <link rel="stylesheet" type="text/css" href="content/css/icomoon.css">
-   <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
-   <link rel="stylesheet" type="text/css" href="content/css/daterangepicker.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootstrap.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootstrap-responsive.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro-tiles.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro-charms.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/metro-ui-light.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/icomoon.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/datepicker.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/daterangepicker.css">
 
    <!--  these two css are to use only for documentation -->
-   <link rel="stylesheet" type="text/css" href="content/css/demo.css">
+   <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/demo.css">
    <link rel="stylesheet" type="text/css" href="scripts/google-code-prettify/prettify.css" >
 
    <!-- Le fav and touch icons -->
-   <link rel="shortcut icon" href="content/ico/favicon.ico">
-   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="content/ico/apple-touch-icon-144-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="content/ico/apple-touch-icon-114-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="content/ico/apple-touch-icon-72-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" href="content/ico/apple-touch-icon-57-precomposed.png">
+   <link rel="shortcut icon" href="{{theme_asset_path}}/ico/favicon.ico">
+   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{theme_asset_path}}/ico/apple-touch-icon-144-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{theme_asset_path}}/ico/apple-touch-icon-114-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{theme_asset_path}}/ico/apple-touch-icon-72-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" href="{{theme_asset_path}}/ico/apple-touch-icon-57-precomposed.png">
   
    <!-- All JavaScript at the bottom, except for Modernizr and Respond.
       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
@@ -51,7 +51,7 @@
    <!-- Subhead
    ================================================== -->
      <div class="container">
-         <div class="span11"> 
+         <div class="span10"> 
         <div class="page-header">  
           <h1>{{ page.title }}</h1>
         </div>
@@ -59,7 +59,12 @@
   {% assign tags_list = page.tags %}
   {% include helpers/tags_list.html %}
   </ul>
-         </div>
+  <p>
+           {{ content }}
+         </p>
+
+          </div>
+       
      </div>  
    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -81,79 +86,3 @@
    </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div id="page">
-  <h1 class>{{ page.title }}</h1>
-  <ul class="tag_box inline">
-  {% assign tags_list = page.tags %}
-  {% include helpers/tags_list.html %}
-  </ul>
-
-  {{ content }}
-
-  <address class="signature">
-    <a class="author" href="/">{{ site.author.name }}</a> 
-    <span class="date">{{ page.date | date_to_long_string }}</span>
-    <span class="location">{{ page.location }}</span>
-  </address>
-  
-  <div class="prev-next">
-  {% if page.next %}
-    <a href="{{ page.next.url }}" class="next" title="{{ page.next.title }}">Next Post &rarr;</a>
-  {% endif %}
-  {% if page.previous %}
-    <a href="{{ page.previous.url }}" class="prev" title="{{ page.previous.title }}">&larr; Earlier Post</a>
-  {% endif %}
-  </div>
-  {% if site.enable_tweet_button %}
-    {% include helpers/tweet-button.html %}
-  {% endif %}
-</div><!-- End Page -->
-<div id = "google-ads">
-<script type="text/javascript">
-google_ad_client = "ca-pub-5288940759807123";
-/* Pradeepnayak's ads */
-google_ad_slot = "2137125699";
-google_ad_width = 728;
-google_ad_height = 90;
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</div>
-
-<!-- Discus Comments -->
-<div id="disqus_thread">
-  <h2>Comment Section</h2>
-{% if page.comments %}
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = '{{ site.author.disqus_shortname }}'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-{% endif %}
-</div>
