further more ui tweaks

--- a/_includes/themes/metroui/default.html
+++ b/_includes/themes/metroui/default.html
@@ -87,7 +87,7 @@
    <div id="home-tiles" class="container-fluid metro-responsive-tiles">
       <div class="row-fluid">
          <div class="span4">
-            <a class="tile wide imagetext bg-color-green first" href="http://pradeepnayak.in/blog">
+            <a class="tile wide imagetext bg-color-green first" href="./blog">
                <div class="image-wrapper">
                   <span class="icon icon-document-2"></span>
                </div>
@@ -120,7 +120,7 @@
    
       <div class="row-fluid">
          <div class="span4">
-            <a class="tile wide imagetext bg-color-greenDark first" href="http://pradeepnayak.in/archive.html">
+            <a class="tile wide imagetext bg-color-greenDark first" href="./archive.html">
                <div class="image-wrapper">
                   <span class="icon icon-map"></span>
                </div>
