--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -278,7 +278,7 @@ td.align-center,
 body {
   margin: 0;
   font-family: "Open Sans", Arial, Helvetica, Sans-Serif;
-  font-size: 14px;
+  font-size: 15px;
   line-height: 20px;
   color: #333333;
   background-color: #ffffff;
@@ -5632,7 +5632,7 @@ body {
   padding-top: 24px;
   padding-bottom: 88px;
   font-family: "Open Sans", Arial, Helvetica, Sans-Serif;
-  font-size: 11px;
+  font-size: 15px;
   font-weight: 300;
 }
 
@@ -6460,9 +6460,9 @@ h4 {
 body,
 h5,
 legend {
-  font-size: 13px;
+  font-size: 18px;
   font-weight: 300;
-  line-height: 20px;
+  line-height: 30px;
 }
 
 h6,
@@ -6633,7 +6633,7 @@ Back button.
 }
 
 #nav-bar .win-backbutton {
-  position: absolute;
+  position: relative;
   top: 8px;
   left: 0;
 }
