--- a/_includes/themes/metroui/post.html
+++ b/_includes/themes/metroui/post.html
@@ -17,6 +17,7 @@
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 
    <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootstrap.css">
+      <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/metro-ui-light.css">
    <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootstrap-responsive.css">
    <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro.css">
    <link rel="stylesheet" type="text/css" href="{{theme_asset_path}}/css/bootmetro-tiles.css">
@@ -47,7 +48,15 @@
    <!--[if lt IE 7]>
    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
    <![endif]-->
-
+   <header id="nav-bar" class="container-fluid">
+      <div class="row-fluid">
+         <div class="span8">
+            <div id="header-container">
+               <a id="backbutton" class="win-backbutton" href="/blog"></a>
+            </div>
+          </div>
+      </div>
+    </header>
    <!-- Subhead
    ================================================== -->
      <div class="container">
@@ -59,9 +68,9 @@
   {% assign tags_list = page.tags %}
   {% include helpers/tags_list.html %}
   </ul>
-  <p>
+  
            {{ content }}
-         </p>
+         
 
           </div>
        
