fixed js includes

--- a/_includes/themes/metroui/default.html
+++ b/_includes/themes/metroui/default.html
@@ -46,7 +46,7 @@
    <!-- All JavaScript at the bottom, except for Modernizr and Respond.
       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-   <script src="scripts/modernizr-2.6.2.min.js"></script>
+   <script src="{{theme_asset_path}}/scripts/modernizr-2.6.2.min.js"></script>
 
    
 </head>
@@ -161,16 +161,16 @@
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
    <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
-   <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
-   <!--<script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>-->
-   <script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>
-   <script type="text/javascript" src="scripts/demo.js"></script>
-   <script type="text/javascript" src="scripts/holder.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/google-code-prettify/prettify.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootstrap.min.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootmetro-panorama.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootmetro-pivot.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootmetro-charms.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootstrap-datepicker.js"></script>
+   <!--<script type="text/javascript" src="{{theme_asset_path}}/scripts/jquery.nicescroll.js"></script>-->
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/jquery.touchSwipe.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/demo.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/holder.js"></script>
    <script type="text/javascript">
       $('.panorama').panorama({
          nicescroll: false,
