--- a/_includes/themes/metroui/page.html
+++ b/_includes/themes/metroui/page.html
@@ -40,7 +40,7 @@
    <!-- All JavaScript at the bottom, except for Modernizr and Respond.
       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-   <script src="scripts/modernizr-2.6.1.min.js"></script>
+   <script src="{{theme_asset_path}}/scripts/modernizr-2.6.2.min.js"></script>
 </head>
 
 <body>
@@ -68,18 +68,18 @@
      </div>  
    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-   <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.2.min.js'>\x3C/script>")</script>
+   <script>window.jQuery || document.write("<script src='{{theme_asset_path}}/scripts/jquery-1.8.2.min.js'>\x3C/script>")</script>
 
-   <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
-   <script type="text/javascript" src="scripts/jquery.mousewheel.js"></script>
-   <script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
-   <script type="text/javascript" src="scripts/demo.js"></script>
-   <script type="text/javascript" src="scripts/holder.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
-   <script type="text/javascript" src="scripts/daterangepicker.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/google-code-prettify/prettify.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/jquery.mousewheel.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/jquery.scrollTo.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootstrap.min.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootmetro.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootmetro-charms.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/demo.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/holder.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/bootstrap-datepicker.js"></script>
+   <script type="text/javascript" src="{{theme_asset_path}}/scripts/daterangepicker.js"></script>
    <script type="text/javascript">
       $(".metro").metro();
    </script>
