adding linkedin profile instead of about page

--- a/_includes/themes/metroui/default.html
+++ b/_includes/themes/metroui/default.html
@@ -125,9 +125,9 @@
          </div>
 
          <div class="span4">
-            <a class="tile wide imagetext bg-color-blueDark middle" href="./about">
+            <a class="tile wide imagetext bg-color-blueDark middle" href="http://www.linkedin.com/in/pradeep1288">
                <div class="image-wrapper">
-                  <span class="icon icon-info"></span>
+                  <span class="icon icon-linkedin"></span>
                </div>
                <div class="column-text">
                   <div class="text-header3">About</div>
