--- a/_includes/themes/metroui/default.html
+++ b/_includes/themes/metroui/default.html
@@ -130,7 +130,7 @@
                   <span class="icon icon-linkedin"></span>
                </div>
                <div class="column-text">
-                  <div class="text-header3">About</div>
+                  <div class="text-header3">Linkedin</div>
                </div>
             </a>
          </div>
