align profile picture

--- a/_includes/themes/metroui/default.html
+++ b/_includes/themes/metroui/default.html
@@ -66,7 +66,7 @@
                      <h3>Adventurer, Foodie, Programmer, Photographer</h3>
                      {{content}}
                   </div>
-                  <div class="span5">
+                  <div class="span4 offset1">
                      <!--<img id="hero-image" class="pull-right" width="500" height="265" src="content/img/hero4.png" alt="hero">-->
                      <img class="pull right" title="Pradeep Nayak" src="/images/profile.jpg" alt="Pradeeps picture" width="300px">
                  
