--- a/_includes/themes/readable/default.html
+++ b/_includes/themes/readable/default.html
@@ -51,7 +51,7 @@
                 <ul class="nav">
                   <li class="active"><a href="#">Home</a></li>
                   <li><a href="/blog">Blog</a></li>
-                  <li><a href="/archive">Archive</a></li>
+                  <li><a href="/archive.html">Archive</a></li>
                 </ul>
               </div><!--/.nav-collapse -->
             </div>
