--- a/_includes/themes/readable/default.html
+++ b/_includes/themes/readable/default.html
@@ -46,10 +46,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="brand" href="#">Pradeep Nayak</a>
+              <a class="brand" href="/">Pradeep Nayak</a>
               <div class="nav-collapse collapse">
                 <ul class="nav">
-                  <li class="active"><a href="#">Home</a></li>
+                  <li class="active"><a href="/">Home</a></li>
                   <li><a href="/blog">Blog</a></li>
                   <li><a href="/archive.html">Archive</a></li>
                 </ul>
