--- a/assets/themes/readable/css/bootstrap.css
+++ b/assets/themes/readable/css/bootstrap.css
@@ -5644,6 +5644,24 @@ a.thumbnail:focus {
   background-color: #999999;
 }
 
+.tag {
+  display: inline-block;
+  font-size: 18.382px;
+  font-weight: normal;
+  line-height: 23px;
+  color: black;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  white-space: nowrap;
+  vertical-align: baseline;
+  background-color: #999999;
+}
+a.tag:hover{
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
 .label {
   -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
