--- a/_includes/themes/readable/default.html
+++ b/_includes/themes/readable/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ site.title }}</title>
+    <title>{{ site.title }} Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="{{ site.author.name }}">
@@ -61,7 +61,11 @@
     <div class="container">
           {{ content }}    
     </div> <!-- /container -->
-
+    <div id="footer">
+      <div class="container">
+        <p class="muted credit">Made with <a href="http://http://bootswatch.com">Bootswatch</a> and powered by <a href="http://jekyllrb.com">Jekyll</a>.</p>
+      </div>
+    </div>
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
