--- a/_includes/themes/readable/default.html
+++ b/_includes/themes/readable/default.html
@@ -70,6 +70,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ theme_asset_path }}/js/jquery.min.js"></script>
-    <script src="{{ theme_asset_path }}/js/bootstrap-min.js"></script>
+    <script src="{{ theme_asset_path }}/js/bootstrap.min.js"></script>
   </body>
 </html>
