fix a broken link in footer. Thanks @e_anurag

--- a/_includes/themes/readable/index.html
+++ b/_includes/themes/readable/index.html
@@ -70,7 +70,7 @@
     </div> <!-- /container -->
     <div id="footer">
       <div class="container">
-        <p class="muted credit">Made with <a href="http://http://bootswatch.com">Bootswatch</a> and powered by <a href="http://jekyllrb.com">Jekyll</a>.</p>
+        <p class="muted credit">Made with <a href="http://bootswatch.com">Bootswatch</a> and powered by <a href="http://jekyllrb.com">Jekyll</a>.</p>
       </div>
     </div>
 
