enabling tweet button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,8 @@
       </footer>
     </div><!-- /.article-wrap -->
   </article>
+  <br/>
+  {% include helpers/tweet-button.html %}
 </div><!-- /#main -->
 
 <div class="footer-wrap">
