enabling google ads

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,6 +59,7 @@
     {% endfor %}
     </ul>
     <hr />
+      {% include _google-ads.html%}
       {% include _disqus.html %}
 
   </div><!-- /.related-articles -->{% endif %}
